[gd_scene load_steps=3 format=3 uid="uid://beplhhyfw3vj"]

[ext_resource type="Script" path="res://Client.gd" id="1_x0fgo"]
[ext_resource type="Script" path="res://scenes/RTCTest.gd" id="2_2t755"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Client" type="Node" parent="."]
script = ExtResource("1_x0fgo")

[node name="LineEdit" type="LineEdit" parent="Client"]
offset_left = 26.0
offset_top = 119.0
offset_right = 297.0
offset_bottom = 158.0

[node name="SendPacket" type="Button" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 72.0
offset_right = 196.0
offset_bottom = 111.0
text = "Send Test Packet"

[node name="StartClient" type="Button" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 22.0
offset_right = 196.0
offset_bottom = 61.0
text = "Start Client"

[node name="JoinLobby" type="Button" parent="."]
layout_mode = 0
offset_left = 305.0
offset_top = 121.0
offset_right = 418.0
offset_bottom = 160.0
text = "Join Lobby"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 659.275
offset_top = 158.0
offset_right = 843.275
offset_bottom = 249.0
script = ExtResource("2_2t755")

[connection signal="pressed" from="SendPacket" to="Client" method="_on_send_packet_pressed"]
[connection signal="pressed" from="StartClient" to="Client" method="_on_start_client_pressed"]
[connection signal="pressed" from="JoinLobby" to="Client" method="_on_join_lobby_pressed"]
[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
